deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: api
spec:
  replicas: 1 # create 1 pod with 1 container inside
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: 211104/api:v0.0.67
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: api-config
              mountPath: /var/www/html/.env
              subPath: .env
              readOnly: true
      volumes:
        - name: api-config
          configMap:
            name: api-configmap
